--- a/server/package.json
+++ b/server/package.json
@@ -4,14 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "npx eslint . --ext .js,.ts", 
+    "build": "npm run lint && npx tsc" 
   },
   "author": "Rhys Clark",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.20",
     "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.0.3"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.9.1",
+    "@typescript-eslint/parser": "^6.9.1",
+    "eslint": "^8.53.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   }
 }
