--- a/server/package.json
+++ b/server/package.json
@@ -2,13 +2,16 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "lint": "npx eslint . --ext .js,.ts", 
-    "build": "npm run lint && npx tsc" 
-  },
+  "main": "server.js",
   "author": "Rhys Clark",
   "license": "ISC",
+  "scripts": {
+    "lint": "npx eslint . --ext .js,.ts",
+    "build": "webpack --config webpack.config.cjs",
+    "start": "concurrently \"npm:watch-ts\" \"npm:run-server\"",
+    "watch-ts": "webpack --watch",
+    "run-server": "nodemon --exec node dist/server.cjs"
+  },
   "dependencies": {
     "@types/express": "^4.17.20",
     "body-parser": "^1.20.2",
@@ -17,10 +20,19 @@
     "mongoose": "^7.0.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.2",
+    "@babel/preset-env": "^7.23.2",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
+    "babel-loader": "^9.1.3",
+    "concurrently": "^8.2.2",
     "eslint": "^8.53.0",
+    "ts-loader": "^9.5.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "tsconfig-paths-webpack-plugin": "^4.1.0",
+    "typescript": "^5.2.2",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-node-externals": "^3.0.0"
   }
 }
