--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,21 +1,34 @@
 {
+  "ts-node": {
+    "require": [
+      "ts-node/register",
+      "tsconfig-paths/register"
+    ],
+    "esm": true
+  },
+
   "compilerOptions": {
-    "target": "es2016",                                  
-    "module": "ES6",                                
-    "esModuleInterop": true,                             
+    "noImplicitAny": true,
+    "target": "esnext",                                  
+    "module": "ES6",
+    "moduleSuffixes": [".ts", "js", ""],
+    "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,           
     "strict": true,                                      
     "skipLibCheck": true,
-    "baseUrl": ".",
     "outDir": "./dist",
-    "moduleResolution": "node"
+    "allowJs": true,
+    "moduleResolution": "node",
+    "baseUrl": "./src",
+    "paths": {
+      "@/Routes/*": ["Routes/*"],
+      "@/Models/*": ["Models/*"],
+      "@/Controllers/*": ["Controllers/*"],
+    }
   },
 
   "include": [
-    "server.ts",
-    "Controllers",
-    "Models",
-    "Routes",
+    "./src/server.ts",
   ],
 
   "exclude": [
