--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -22,5 +22,10 @@
         "no-multiple-empty-lines": ["error", { "max": 4 }], // Allow up to 4 blank lines
         "max-len": ["error", { "code": 120 }]  // Set max line length to 120 characters
     },
-    "ignorePatterns": ["client/webpack.common.cjs"]
+    "ignorePatterns": [
+        "webpack.common.cjs",
+        "webpack.prod.cjs",
+        "webpack.dev.cjs",
+        ".eslintrc.cjs"
+    ]
 }
