--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -25,7 +25,10 @@
       "src/layout/*",
       "src/pages/*",
     ],
-    "exclude": ["node_modules"],
+    "exclude": [
+      "node_modules",
+      "webpack.common.cjs"
+    ],
     
     
 }
